--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .app-container {
   max-width: 800px;
-  margin: 0 auto;
+  margin: 30px auto;
   padding: 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
@@ -10,4 +10,12 @@
 body {
   background-color: #f4f4f4;
   font-family: Arial, sans-serif;
+}
+
+.del {
+  margin-right: 10px;
+}
+
+.post-body {
+  height: 300px;
 }
